add full scale test